# discordcore

./: .air.toml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CACHE_ADVANCED_IMPROVEMENTS.md  CACHE_IMPROVEMENTS.md  CLAUDE.md  COMMAND_MESSAGE_REVIEW.md  COMMAND_MESSAGE_REVIEW_COMPACT.csv  Cargo.toml  FIXES_APPLIED.md  GEMINI.md  INTERACTION_ROUTER_PR1.md  OPS.md  PRODUCT_DIRECTION.md  README.md  Routing Usage Analysis in Discordcore.md  TODO pt. 1.md  TODO pt. 2.md  UI_RULES.md  a.md  all_escapes.txt  bench_m2.txt  bench_m2_v2.txt  bench_out.txt  build_esc.txt  c  c.out  cache.go  commit.ps1  commit_remaining.ps1  config.go  config.json  consts.go  coverage  coverage.html  coverage.out  (+53 more)
.claude/: settings.local.json
.codex/: smallfrappuccino-discordcore.sqlite-shm
.gemini/: fix.go  fix2.go  fix3.go  fix4.go  fix5.go
.mcp/: smallfrappuccino-discordcore.sqlite-shm
alicebot-dashboard/: README.md  package.json  tsconfig.json
cmd/: main.go
crates/telemetry/: Cargo.toml
crates/telemetry/benches/: serialize.rs
crates/telemetry/src/: lib.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
engineering/: AGENTS.md  Claude Escapes to Heap.md  Claude Generic.md  GEMINI.md  Gemini Escapes to Heap.md  memory management.md  softmax.md
example/: avatar_monitoring_example.go  json_database_example.go  monitoring_example.go  slash_commands_example.go  sqlite_database_example.go  user_analytics_example.go
notebookLM/: ROOT_architecture_payload.md  app_notebook_payload.md  clean_notebook_payload.md  control_notebook_payload.md  discord_notebook_payload.md  files_notebook_payload.md  golang_archive.md  golang_arena.md  golang_bufio.md  golang_builtin.md  golang_bytes.md  golang_cmd_addr2line.md  golang_cmd_api.md  golang_cmd_asm.md  golang_cmd_buildid.md  golang_cmd_cgo.md  golang_cmd_compile.md  golang_cmd_compile_internal_abi.md  golang_cmd_compile_internal_abt.md  (+163 more)
notes/: a.md  (+5 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+1644 files in other folders)
