[workspace]
resolver = "3"
members = ["xtask", "crates/testkit", "crates/telemetry"]

[workspace.package]
edition = "2024"
# Floor imposed by core::hint::cold_path (§4); twilight's 1.89 MSRV is a
# dependency floor and does not bind this crate.
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/small-frappuccino/discordcore"

[workspace.dependencies]
testkit = { path = "crates/testkit" }
crossbeam-utils = "0.8"
criterion = "0.5"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# §6: every unsafe block carries a // SAFETY: invariant.
undocumented_unsafe_blocks = "deny"

[profile.bench]
debug = true # symbol fidelity for perf/cachegrind attribution (§4 gate)
