[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal automation: alloc regression gate, bench runner, llvm-lines report"
publish = false

[dependencies]

[lints]
workspace = true
