[package]
name = "testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Allocation-count oracle (§7): counting global allocator + falsification harness"
publish = false

[dependencies]

[lints]
workspace = true
